[package]
name = "fsrx"
version = "1.0.1"
description = "📚 flow state reading in the terminal"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thatvegandev/fsrx.git"
homepage = "https://github.com/thatvegandev/fsrx"
license = "MIT"
authors = ["Colby Thomas <thatvegandev@gmail.com>"]
exclude = [".github/*"]
keywords = ["reading", "utility", "terminal", "cli", "fast"]

[dependencies]
ansi_term = "0.12.1"
regex = "1.5.6"
unicode-segmentation = "1.9.0"
clap = { version = "3.1.18", features = ["derive"] }
atty = "0.2.14"
