[package]
name = "fsrx"
version = "1.0.3"
description = "📚 flow state reading in the terminal"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jrnxf/fsrx.git"
homepage = "https://github.com/jrnxf/fsrx"
license = "MIT"
authors = ["Colby Thomas <colby@jrnxf.co>"]
exclude = [".github/*"]
keywords = ["reading", "utility", "terminal", "cli", "fast"]

[dependencies]
ansi_term = "0.12.1"
regex = "1.6.0"
unicode-segmentation = "1.9.0"
clap = { version = "3.2.8", features = ["derive"] }
atty = "0.2.14"
